don't set java.ext.dirs... instead allow ECLIMD_OPTS env var for setting jvm args
git-svn-id: https://eclim.svn.sourceforge.net/svnroot/eclim/trunk@1683 b5bd0a2e-1a23-0410-8567-9814cbbba304